--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -9,7 +9,9 @@
   form{
     display: flex;
     flex-direction: column;
-    width: 300px;
-    
-    margin: 0 auto;
+    width: 300px; 
+  }
+
+  form button {
+    margin-top: 1rem;
   }
